# interview_ai

./: .env.example  .gitignore  containers.py  info.json  main.py  pyproject.toml  ws_client.py  ws_server.py
.github/ISSUE_TEMPLATE/: custom.md
interview/application/: interview_service.py
interview/domain/: info.py  interview.py
interview/domain/llm/: llm_client.py
interview/domain/ocr/: ocr_client.py
interview/domain/openai/: openai_client.py
interview/domain/repository/: interview_repo.py
interview/domain/tts/: tts_client.py
interview/infra/llm/: bedrock_client.py  llm_factory.py  local_client.py  openai_client.py  openchat_client.py
interview/infra/ocr/: tesseract_client.py
interview/infra/repository/: interview_repo.py  interview_repo_dynamo.py  interview_repo_mongo.py
interview/infra/tts/: polly_client.py
interview/interface/: dependencies.py  dto.py
interview/interface/controllers/: interview_controller.py
