[project]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-aws (>=0.2.23,<0.3.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "boto3 (>=1.38.23,<2.0.0)",
    "dependency-injector (>=4.47.0,<5.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "amazon-transcribe (>=0.6.4,<0.7.0)",
    "aiofile (>=3.9.0,<4.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "aiohttp (>=3.12.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

